# dagster-clinical-data-pipeline

./: .env.example  .gitignore  AWS_DEPLOYMENT.md  AWS_DEPLOYMENT_DE.md  README.md  README_DE.md  USER_STORIES.md  USER_STORIES_DE.md  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml
clinicflow/: pyproject.toml
clinicflow/src/clinicflow/: definitions.py
clinicflow/src/clinicflow/defs/: assets.py  jobs.py  resources.py  schedules.py
clinicflow/tests/: test_pipeline.py
data/: diagnoses.csv  patients.csv  prescriptions.csv  visits.csv
db/: init.sql
docs/adr/: ADR-001-orchestrator-choice.md  ADR-002-data-privacy.md  ADR-003-database-schema.md
