[project]
name = "clinicflow"
version = "0.1.0"
description = "Capstone: Clinical Analytics Pipeline with Dagster"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster==1.12.19",
    "dagster-dg-cli==1.12.19",
    "dagster-webserver==1.12.19",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinicflow"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "clinicflow"
